--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the App controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.row {
+  .col-lg-6 {
+    .avatar {
+      height: 25vh;
+      width: auto;
+      border-radius: 100%;
+    }
+    p {
+      text-align: center;
+    }
+  }
+}
