--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Event</h1>
+<div class="row">
+  <div class="col-lg-6 offset-lg-3">
+    <h1>New Event</h1>
 
-<%= render 'form', event: @event %>
+    <%= render 'form', event: @event %>
 
-<%= link_to 'Back', events_path %>
+    <%= link_to 'Back', events_path %>
+  </div>
+</div>
